# pattern-recognition-handbook

./: .gitignore  AGENTS.md  LICENSE  README.MD  _config.yml  _quarto.yml  env.yml  index.html  index.qmd  pyproject.toml
.github/workflows/: publish-slides.yml
notebooks/00/: intro.ipynb  intro.py
notebooks/01/: bayes_decision_theory.ipynb  bayes_decision_theory.py  bayes_decision_theory_exercise.ipynb  bayes_decision_theory_exercise.py
notebooks/02/: density_estimation.ipynb  density_estimation.py  density_estimation_exercise.ipynb  density_estimation_exercise.py  mixture_models.ipynb
notebooks/03/: linear_classifiers.ipynb  linear_classifiers.py  linear_classifiers_exercise.ipynb  linear_classifiers_exercise.py  support_vector_machine.ipynb  support_vector_machine.py  support_vector_machine_exercise.ipynb  support_vector_machine_exercise.py
notebooks/04/: neural_networks.ipynb  neural_networks_1.ipynb  neural_networks_1.py  neural_networks_1_exercise.ipynb  neural_networks_1_exercise.py  neural_networks_2.ipynb  neural_networks_2.py  neural_networks_2_exercise.ipynb  neural_networks_2_exercise.py  neural_networks_3.css  neural_networks_3.ipynb  neural_networks_3.py  neural_networks_3_exercise.ipynb  neural_networks_3_exercise.py
notebooks/05/: rbf_networks.ipynb  rbf_networks.py  rbf_networks_exercise.ipynb  rbf_networks_exercise.py
notebooks/06/: kernel_methods.ipynb  kernel_methods.py  kernel_methods_exercise.ipynb  kernel_methods_exercise.py  ranking.ipynb
notebooks/07/: linear_dim_reduction.ipynb  linear_dim_reduction.py  (+2 more)
notebooks/09/: ranking.ipynb  (+3 more)
(+25 files in other folders)
